@@ -29,6 +29,8 @@ unity (7.4.0+16.04.20160906-0ubuntu2) UNRELEASED; urgency=medium
   * Round gtk scaling factor to closest integer. (LP: #1649736)
   * Keep the screen locked if rebooting with autologin. (LP: #1600389)
   * Use g_mkdir_with_parents instead of mkdir.
+  * Lockscreen: always draw the background-color in the lockscreen (LP:
+    #1702701)
 
   [ Marco Trevisan (Treviño) ]
   * LockScreenController: use InputMonitor to get all the events and
